@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.bluetooth.enoceanble.internal;
 
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -46,7 +45,7 @@ public class EnoceanBleDiscoveryParticipant implements BluetoothDiscoveryPartici
 
     @Override
     public Set<ThingTypeUID> getSupportedThingTypeUIDs() {
-        return Collections.singleton(EnoceanBleBindingConstants.THING_TYPE_PTM215B);
+        return Set.of(EnoceanBleBindingConstants.THING_TYPE_PTM215B);
     }
 
     @Override
