@@ -14,7 +14,7 @@ package org.openhab.binding.elerotransmitterstick.internal.handler;
 
 import static org.openhab.binding.elerotransmitterstick.internal.EleroTransmitterStickBindingConstants.*;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.openhab.binding.elerotransmitterstick.internal.config.EleroChannelConfig;
 import org.openhab.binding.elerotransmitterstick.internal.stick.CommandType;
@@ -88,20 +88,20 @@ public class EleroChannelHandler extends BaseThingHandler implements StatusListe
 
         if (channelUID.getIdWithoutGroup().equals(CONTROL_CHANNEL)) {
             if (command == UpDownType.UP) {
-                bridge.getStick().sendCommand(CommandType.UP, Collections.singletonList(channelId));
+                bridge.getStick().sendCommand(CommandType.UP, List.of(channelId));
             } else if (command == UpDownType.DOWN) {
-                bridge.getStick().sendCommand(CommandType.DOWN, Collections.singletonList(channelId));
+                bridge.getStick().sendCommand(CommandType.DOWN, List.of(channelId));
             } else if (command == StopMoveType.STOP) {
-                bridge.getStick().sendCommand(CommandType.STOP, Collections.singletonList(channelId));
-            } else if (command instanceof PercentType) {
-                CommandType cmd = CommandType.getForPercent(((PercentType) command).intValue());
+                bridge.getStick().sendCommand(CommandType.STOP, List.of(channelId));
+            } else if (command instanceof PercentType pt) {
+                CommandType cmd = CommandType.getForPercent(pt.intValue());
                 if (cmd != null) {
-                    bridge.getStick().sendCommand(cmd, Collections.singletonList(channelId));
+                    bridge.getStick().sendCommand(cmd, List.of(channelId));
                 } else {
                     logger.debug("Unhandled command {}.", command);
                 }
             } else if (command == RefreshType.REFRESH) {
-                bridge.getStick().requestUpdate(Collections.singletonList(channelId));
+                bridge.getStick().requestUpdate(List.of(channelId));
             }
         }
     }
