@@ -13,8 +13,8 @@
 package org.openhab.binding.freeboxos.internal.handler;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 
@@ -126,7 +126,7 @@ public class FreeboxOsHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(FreeboxOsDiscoveryService.class);
+        return Set.of(FreeboxOsDiscoveryService.class);
     }
 
     @Override
